test/negative/unary-until02.cfr
// Test for negative until constraint

a
 b ?
  c ?
  d ?
  [c until ]


// Fail to parse as expected 
